--- a/style.css
+++ b/style.css
@@ -73,3 +73,11 @@ body {
     box-shadow: 1px 1px 1px 1px;
     border-radius: 100%;
 }
+
+
+li:hover {
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px 1px;
+}
